[gd_scene load_steps=65 format=3 uid="uid://q1g7jbom41es"]

[ext_resource type="Texture2D" uid="uid://ds3w6rvgkewnm" path="res://Assets/Ogre2/Hurt/Hurt_008.png" id="1"]
[ext_resource type="Texture2D" uid="uid://drjwoeqgo1g27" path="res://Assets/Ogre2/Dying/Dying_001.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bjkn616mg0sss" path="res://Assets/Ogre2/Dying/Dying_000.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cpnrvtxomdcr7" path="res://Assets/Ogre2/Hurt/Hurt_003.png" id="4"]
[ext_resource type="Script" path="res://Scripts/Ogre2.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bli0wxyky4ju0" path="res://Assets/Ogre2/Dying/Dying_004.png" id="6"]
[ext_resource type="Texture2D" uid="uid://u2x3eqqha6ts" path="res://Assets/Ogre2/Dying/Dying_003.png" id="7"]
[ext_resource type="Texture2D" uid="uid://15ss2ld5dsua" path="res://Assets/Ogre2/Hurt/Hurt_007.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bydjq7swx3ijl" path="res://Assets/Ogre2/Hurt/Hurt_004.png" id="9"]
[ext_resource type="Texture2D" uid="uid://b1rrojo5wjm8b" path="res://Assets/Ogre2/Walking/Walking_003.png" id="10"]
[ext_resource type="Texture2D" uid="uid://llgb44om1kgs" path="res://Assets/Ogre2/Walking/Walking_004.png" id="11"]
[ext_resource type="Texture2D" uid="uid://c46eukg477ghk" path="res://Assets/Ogre2/Dying/Dying_002.png" id="12"]
[ext_resource type="Texture2D" uid="uid://suv321s0h10" path="res://Assets/Ogre2/Walking/Walking_017.png" id="13"]
[ext_resource type="Texture2D" uid="uid://djluiol3c0415" path="res://Assets/Ogre2/Walking/Walking_002.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b771003gqvfpa" path="res://Assets/Ogre2/Hurt/Hurt_009.png" id="15"]
[ext_resource type="Texture2D" uid="uid://cv8gyeihotvdo" path="res://Assets/Ogre2/Hurt/Hurt_002.png" id="16"]
[ext_resource type="Texture2D" uid="uid://cywkojhp01civ" path="res://Assets/Ogre2/Walking/Walking_005.png" id="17"]
[ext_resource type="Texture2D" uid="uid://ch4l8lit0xkx4" path="res://Assets/Ogre2/Dying/Dying_006.png" id="18"]
[ext_resource type="Texture2D" uid="uid://djglaxh11tl4p" path="res://Assets/Ogre2/Dying/Dying_013.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cyl5l3va6cbyn" path="res://Assets/Ogre2/Dying/Dying_009.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cndjhs8hkfix5" path="res://Assets/Ogre2/Walking/Walking_007.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cmep83wyjumau" path="res://Assets/Ogre2/Dying/Dying_014.png" id="22"]
[ext_resource type="Texture2D" uid="uid://dv7fdthebp14n" path="res://Assets/Ogre2/Dying/Dying_011.png" id="23"]
[ext_resource type="Texture2D" uid="uid://br3cjsy7kjtti" path="res://Assets/Ogre2/Dying/Dying_012.png" id="24"]
[ext_resource type="Texture2D" uid="uid://uvi2opa2hxfe" path="res://Assets/Ogre2/Walking/Walking_000.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bgrmk1dou0nx0" path="res://Assets/Ogre2/Dying/Dying_010.png" id="26"]
[ext_resource type="Texture2D" uid="uid://btgxttvvv1sdg" path="res://Assets/Ogre2/Hurt/Hurt_010.png" id="27"]
[ext_resource type="Texture2D" uid="uid://ct7fasvvhyia" path="res://Assets/Ogre2/Dying/Dying_007.png" id="28"]
[ext_resource type="Texture2D" uid="uid://1dl7wqil6eha" path="res://Assets/Ogre2/Dying/Dying_008.png" id="29"]
[ext_resource type="Texture2D" uid="uid://cpopuqg6sqp1g" path="res://Assets/Ogre2/Hurt/Hurt_011.png" id="30"]
[ext_resource type="Texture2D" uid="uid://ofc88jiiyjud" path="res://Assets/Ogre2/Walking/Walking_008.png" id="31"]
[ext_resource type="AudioStream" uid="uid://ba8gu4c4h6vs8" path="res://Assets/Sound/Hit.mp3" id="32"]
[ext_resource type="Texture2D" uid="uid://bfeoao5d2amhl" path="res://Assets/Ogre2/Walking/Walking_010.png" id="33"]
[ext_resource type="Texture2D" uid="uid://b4h2b662y0lxn" path="res://Assets/Ogre2/Walking/Walking_001.png" id="34"]
[ext_resource type="Texture2D" uid="uid://dl46wtg717nmg" path="res://Assets/Ogre2/Walking/Walking_006.png" id="35"]
[ext_resource type="Texture2D" uid="uid://cqtph55ay02iv" path="res://Assets/Ogre2/Hurt/Hurt_006.png" id="36"]
[ext_resource type="Texture2D" uid="uid://tpvwcf2lsrld" path="res://Assets/Ogre2/Hurt/Hurt_000.png" id="37"]
[ext_resource type="Texture2D" uid="uid://cm1gs52ud1iif" path="res://Assets/Ogre2/Hurt/Hurt_001.png" id="38"]
[ext_resource type="Texture2D" uid="uid://c0y3laf632i3r" path="res://Assets/Ogre2/Hurt/Hurt_005.png" id="39"]
[ext_resource type="Texture2D" uid="uid://breu1krxdxb72" path="res://Assets/Ogre2/Dying/Dying_005.png" id="40"]
[ext_resource type="Texture2D" uid="uid://3nwcfuc7awbr" path="res://Assets/Ogre2/Walking/Walking_009.png" id="41"]
[ext_resource type="Texture2D" uid="uid://bpcblkoygxnp8" path="res://Assets/Ogre2/Walking/Walking_013.png" id="42"]
[ext_resource type="Texture2D" uid="uid://dw0e6qukr2dl2" path="res://Assets/Ogre2/Walking/Walking_011.png" id="43"]
[ext_resource type="Texture2D" uid="uid://dleny3yrk6y14" path="res://Assets/Ogre2/Walking/Walking_012.png" id="44"]
[ext_resource type="Texture2D" uid="uid://dcx5qoj2fkrim" path="res://Assets/Ogre2/Walking/Walking_015.png" id="45"]
[ext_resource type="Texture2D" uid="uid://c1pq2utv8fyed" path="res://Assets/Ogre2/Walking/Walking_014.png" id="46"]
[ext_resource type="Texture2D" uid="uid://cvc7r3uvhu7ht" path="res://Assets/Ogre2/Walking/Walking_016.png" id="47"]
[ext_resource type="Texture2D" uid="uid://47h00x3pr7ci" path="res://Assets/Ogre2/Attacking/Attacking_001.png" id="48"]
[ext_resource type="Texture2D" uid="uid://cy2vec6qmag72" path="res://Assets/Ogre2/Attacking/Attacking_000.png" id="49"]
[ext_resource type="Texture2D" uid="uid://dmmp01kaygvs6" path="res://Assets/Ogre2/Attacking/Attacking_002.png" id="50"]
[ext_resource type="Texture2D" uid="uid://csx188d3kavtb" path="res://Assets/Ogre2/Attacking/Attacking_003.png" id="51"]
[ext_resource type="Texture2D" uid="uid://5x1a57rnlx2" path="res://Assets/Ogre2/Attacking/Attacking_005.png" id="52"]
[ext_resource type="Texture2D" uid="uid://dx35fsdayc2fn" path="res://Assets/Ogre2/Attacking/Attacking_006.png" id="53"]
[ext_resource type="Texture2D" uid="uid://cptlxy432pi2i" path="res://Assets/Ogre2/Attacking/Attacking_007.png" id="54"]
[ext_resource type="Texture2D" uid="uid://b5a4ycsfmjf4q" path="res://Assets/Ogre2/Attacking/Attacking_008.png" id="55"]
[ext_resource type="Texture2D" uid="uid://yeohlmp8uyj3" path="res://Assets/Ogre2/Attacking/Attacking_009.png" id="56"]
[ext_resource type="Texture2D" uid="uid://ion3p2i4mbws" path="res://Assets/Ogre2/Attacking/Attacking_010.png" id="57"]
[ext_resource type="Texture2D" uid="uid://bmvd7cptouxrm" path="res://Assets/Ogre2/Attacking/Attacking_004.png" id="58"]
[ext_resource type="Texture2D" uid="uid://ubgj6n6uug5p" path="res://Assets/Ogre2/Attacking/Attacking_011.png" id="59"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("49")
}, {
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("50")
}, {
"duration": 1.0,
"texture": ExtResource("51")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("52")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("55")
}, {
"duration": 1.0,
"texture": ExtResource("56")
}, {
"duration": 1.0,
"texture": ExtResource("57")
}, {
"duration": 1.0,
"texture": ExtResource("59")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("41")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("43")
}, {
"duration": 1.0,
"texture": ExtResource("44")
}, {
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("47")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(120, 184)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(91, 21.125)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(254, 146)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(448, 85.5)

[node name="Ogre2" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 163
script = ExtResource("5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("1")
animation = &"attacking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 66)
shape = SubResource("4")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 350)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(10, -142.875)
shape = SubResource("3")

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2(2, 26)
shape = SubResource("5")

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 75.5)
shape = SubResource("6")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32")
